Fixed the footer wrapping badly.  Styled register link.

--- a/multipurpose/style.css
+++ b/multipurpose/style.css
@@ -536,7 +536,7 @@ thead {
 #footer-wrap div#block-menu-menu-site-map div.content ul li {
     display: inline-block;
     margin: 0;
-    margin-right: 7%;
+    margin-right: 6%;
     vertical-align: top;
 	text-align: center;
 	white-space: nowrap;
